--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Deploy Build Files to AWS S3
         run: |
           aws s3 sync build s3://clean-equipment.com --delete
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths '/*'
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths '/*' --query "Invalidation.Status"
           
